<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dhi7VM" type="com.asapplication.app.modules.dhi7.data.viewmodel.Dhi7VM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnvideocamera"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_13pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_700">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearIPhoneXorne"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageVideocamera"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_width="@dimen/_54pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_videocamera"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_videocamera"/>
                <ImageView android:id="@+id/imageSignal"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_218pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_66pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_signal"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_signal"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <androidx.core.widget.NestedScrollView
            android:clipToPadding="false" android:fillViewport="true"
            android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylebluegray_901">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_width="@dimen/_6pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <LinearLayout android:id="@+id/linearRowtwentyseven"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:layout_marginStart="@dimen/_113pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_weight="0.97"
                        android:layout_width="0dp" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtTwentySeven"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_9pxh"
                            android:singleLine="true"
                            android:text="@{dhi7VM.dhi7Model.txtTwentySeven}"
                            style="@style/txtManropesemibold23_1" tools:text="@string/lbl23"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtTwentyEight"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_2pxv"
                            android:layout_marginStart="@dimen/_80pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.3"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_8pxh"
                            android:singleLine="true"
                            android:text="@{dhi7VM.dhi7Model.txtTwentyEight}"
                            style="@style/txtManropesemibold20" tools:text="@string/lbl8"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTwentyNine"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{dhi7VM.dhi7Model.txtTwentyNine}"
                    style="@style/txtManropesemibold20" tools:text="@string/lbl24"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowthirty"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylebluegray_901cornerRadius">
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnthirty"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_62pxv"
                        android:layout_marginStart="@dimen/_38pxh"
                        android:layout_marginTop="@dimen/_80pxv"
                        android:layout_weight="0.47"
                        android:layout_width="0dp" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtThirty"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:lineSpacingExtra="@dimen/_8pxh"
                            android:singleLine="true"
                            android:text="@{dhi7VM.dhi7Model.txtThirty}"
                            style="@style/txtManropesemibold20" tools:text="@string/lbl12"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtThirtyOne"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_31pxv"
                            android:layout_width="wrap_content"
                            android:lineSpacingExtra="@dimen/_8pxh"
                            android:singleLine="true"
                            android:text="@{dhi7VM.dhi7Model.txtThirtyOne}"
                            style="@style/txtManropesemibold20" tools:text="@string/lbl13"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_59pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_weight="0.53"
                        android:layout_width="0dp"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        itemSpace="@{@dimen/_101pxh}"
                        tools:itemCount="2" tools:listitem="@layout/row_dhi_2"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtThirtyTwo"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{dhi7VM.dhi7Model.txtThirtyTwo}"
                    style="@style/txtManropesemibold20" tools:text="@string/lbl25"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowthirtythree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylebluegray_901cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThirtyThree"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_25pxv"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_marginTop="@dimen/_27pxv"
                        android:layout_weight="0.14"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_7pxh"
                        android:paddingBottom="@dimen/_5pxv"
                        android:paddingStart="@dimen/_9pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text="@{dhi7VM.dhi7Model.txtThirtyThree}"
                        style="@style/txtSolidRounded_1" tools:text="@string/lbl2"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThirtyFour"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_25pxv"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_27pxv"
                        android:layout_weight="0.14"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_7pxh"
                        android:paddingBottom="@dimen/_5pxv"
                        android:paddingStart="@dimen/_9pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text="@{dhi7VM.dhi7Model.txtThirtyFour}"
                        style="@style/txtSolidRounded_1" tools:text="@string/lbl4"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThirtyFive"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_27pxv"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_25pxv"
                        android:layout_weight="0.14"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_7pxh"
                        android:paddingBottom="@dimen/_4pxv"
                        android:paddingStart="@dimen/_9pxh"
                        android:paddingTop="@dimen/_6pxv"
                        android:singleLine="true"
                        android:text="@{dhi7VM.dhi7Model.txtThirtyFive}"
                        style="@style/txtSolidRounded_1" tools:text="@string/lbl3"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThirtySix"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_27pxv"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_25pxv"
                        android:layout_weight="0.14"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_7pxh"
                        android:paddingBottom="@dimen/_4pxv"
                        android:paddingStart="@dimen/_9pxh"
                        android:paddingTop="@dimen/_6pxv"
                        android:singleLine="true"
                        android:text="@{dhi7VM.dhi7Model.txtThirtySix}"
                        style="@style/txtSolidRounded_1" tools:text="@string/lbl5"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThirtySeven"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_27pxv"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_25pxv"
                        android:layout_weight="0.14"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_7pxh"
                        android:paddingBottom="@dimen/_4pxv"
                        android:paddingStart="@dimen/_9pxh"
                        android:paddingTop="@dimen/_6pxv"
                        android:singleLine="true"
                        android:text="@{dhi7VM.dhi7Model.txtThirtySeven}"
                        style="@style/txtSolidRounded_1" tools:text="@string/lbl6"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThirtyEight"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_27pxv"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_25pxv"
                        android:layout_weight="0.14"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_7pxh"
                        android:paddingBottom="@dimen/_5pxv"
                        android:paddingStart="@dimen/_9pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text="@{dhi7VM.dhi7Model.txtThirtyEight}"
                        style="@style/txtSolidRounded_1" tools:text="@string/lbl26"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThirtyNine"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_27pxv"
                        android:layout_marginEnd="@dimen/_22pxh"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_25pxv"
                        android:layout_weight="0.14"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_7pxh"
                        android:paddingBottom="@dimen/_5pxv"
                        android:paddingStart="@dimen/_9pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text="@{dhi7VM.dhi7Model.txtThirtyNine}"
                        style="@style/txtSolidRounded_1" tools:text="@string/lbl27"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForty"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{dhi7VM.dhi7Model.txtForty}"
                    style="@style/txtManropesemibold20" tools:text="@string/lbl28"/>
                <FrameLayout android:id="@+id/frameStackfortyone"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_504pxv"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="@dimen/_330pxh" style="@style/groupStylewhite_A700cornerRadius">
                    <ImageView android:id="@+id/imageFortyOne"
                        android:layout_gravity="start"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        cornerRadius="@{@dimen/_12pxh}"
                        imageRes="@{@drawable/img_}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_"/>
                </FrameLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
