<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="twoRowModel" type="com.asapplication.app.modules.two.data.model.TwoRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowbork"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearCard1"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" android:layout_width="0dp"
            android:orientation="vertical" style="@style/groupStylegray_1">
            <ImageView android:id="@+id/imageBork"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_78pxh"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_40pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="@dimen/_77pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_bork}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_bork"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtBorkV530"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_40pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@{twoRowModel.txtBorkV530}"
                style="@style/txtManropesemibold17" tools:text="@string/lbl_bork_v530"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtVacuumcleaner"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_22pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_40pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{twoRowModel.txtVacuumcleaner}"
                style="@style/txtManropemedium12" tools:text="@string/lbl_vacuum_cleaner"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearCard2"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_weight="0.5" android:layout_width="0dp"
            android:orientation="vertical" style="@style/groupStylegray_901cornerRadius">
            <FrameLayout android:id="@+id/frameStack"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_78pxv"
                android:layout_marginEnd="@dimen/_29pxh"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_marginTop="@dimen/_24pxv" android:layout_width="@dimen/_39pxh">
                <ImageView android:id="@+id/imageImageNine"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_78pxh"
                    android:layout_width="@dimen/_39pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image9"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image9"/>
                <ImageView android:id="@+id/imageImageTen"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="@dimen/_39pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image10"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image10"/>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLIFXLEDLight"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@{twoRowModel.txtLIFXLEDLight}"
                style="@style/txtManropesemibold17" tools:text="@string/lbl_lifx_led_light"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSmartbulb"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_22pxv"
                android:layout_marginEnd="@dimen/_29pxh"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{twoRowModel.txtSmartbulb}"
                style="@style/txtManropemedium12" tools:text="@string/lbl_smart_bulb"/>
        </LinearLayout>
    </LinearLayout>
</layout>
